# catalyst-ai

./: README.md
client/: package-lock.json  package.json
client/src/model/impls/llm/: LlmImpl.ts
server/: main.py  model.py  pyproject.toml  server.py
